test/files/invalid/invalid_enum_variant_size.stderr
[0m[1m[38;5;9merror[0m[1m: Integer is out of range for type u8 (range is [0; 255])[0m
  [0m[34m┌─[0m test/files/invalid/invalid_enum_variant_size.fbs:2:7
  [0m[34m│[0m
[0m[34m2[0m [0m[34m│[0m   X = [0m[31m-1[0m
  [0m[34m│[0m       [0m[31m^^[0m

[0m[1m[38;5;9merror[0m[1m: Integer is out of range for type u8 (range is [0; 255])[0m
  [0m[34m┌─[0m test/files/invalid/invalid_enum_variant_size.fbs:6:7
  [0m[34m│[0m
[0m[34m6[0m [0m[34m│[0m   X = [0m[31m256[0m
  [0m[34m│[0m       [0m[31m^^^[0m

[0m[1m[38;5;9merror[0m[1m: Integer is out of range for type i8 (range is [-128; 127])[0m
   [0m[34m┌─[0m test/files/invalid/invalid_enum_variant_size.fbs:10:7
   [0m[34m│[0m
[0m[34m10[0m [0m[34m│[0m   X = [0m[31m128[0m
   [0m[34m│[0m       [0m[31m^^^[0m

Error: Bailing because of errors
